--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "build:single": "vite build",
+    "preview": "vite preview",
+    "generate:inlined": "node ./scripts/generate-inlined-assets.mjs"
   },
   "dependencies": {
     "@esotericsoftware/spine-pixi-v8": "^4.2.95",
@@ -15,6 +17,7 @@
   },
   "devDependencies": {
     "typescript": "^5.2.0",
-    "vite": "^5.0.0"
+    "vite": "^5.0.0",
+    "vite-plugin-singlefile": "^1.3.0"
   }
 }
